# autoax

./: .gitignore  01_generate_initial.py  01_generate_random.py  02_generate_verilog.py  02_learn.py  03_parse_results.py  03_search_hc.py  03_search_nsga.py  04_learn.py  04b_learn_quality.py  04c_learn_bridge.py  04d_learn_quality_bridge.py  04e_learn_bridge_abc.py  04f_learn_quality_bridge_abc.py  04g_learn_bridge_abccomp.py  04h_learn_quality_bridge_abccomp.py  05_generate_nsga.py  05b_generate_nsga_bridge.py  05c_generate_hc_bridge_abc.py  05c_generate_nsga_bridge_abc.py  05o_generate_abc_pickle.py  06_generate_verilog.py  06b_generate_verilog_bridge.py  06c_generate_verilog_abcbridge.py  07_parse_results_final.py  07b_parse_results_bridge_final.py  07c_parse_results_bridge_abc_final.py  LICENSE  README.md  abc.rc  abcsynth.py  dcshell.tcl  dctconf.py  evaluate_hw.py  evaluate_qor.py  evaluate_vivado.py  join_results.py  parse_dc.py  parse_qor.py  parse_vivado.py  (+3 more)
autoax/: __init__.py  abcfeatures.py  abcsynth.py  config.py  featureextractor.py  library.py
components/: lib.json
gauss-fixed/: .gitignore  config.yml
gauss-fixed/eval/: CMakeLists.txt  axgauss.cpp  lib.cpp  lib.hpp  opcache.hpp  similarity.cpp  similarity.hpp
gauss-fixed/lib/: add16.c  add16.h  add8.c  add8.h  add9.c  add9.h  sub16.c  sub16.h
gauss-fixed/synth/: modules.v  template.v
sobel/: .gitignore  analysis.ipynb  config.yml
sobel/eval/: CMakeLists.txt  axsobel.cpp  lib.cpp  lib.hpp  sobel.cpp
templates/: dct_circuit_c1.v  dct_circuit_c2.v  dct_circuit_c3.v  dct_circuit_c4.v
(+7 files in other folders)
